test/ui/lowering/misplaced-path-hanger.lushui
use foo.bar.(super.ban, topmost, self)
